@@ -308,9 +308,9 @@ CREATE TABLE hosts (
 	status		int(4)		DEFAULT '0' NOT NULL,
 -- If status=UNREACHABLE, host will not be checked until this time
 	disable_until	int(4)		DEFAULT '0' NOT NULL,
-	network_errors	int(4)		DEFAULT '0' NOT NULL,
 	error		varchar(128)	DEFAULT '' NOT NULL,
 	available	int(4)		DEFAULT '0' NOT NULL,
+	errors_from	int(4)		DEFAULT '0' NOT NULL,
 	PRIMARY KEY	(hostid),
 	UNIQUE		(host),
 	KEY		(status)
