@@ -113,7 +113,7 @@ extern	int	CONFIG_DBPORT;
 #define ACTION_SUBJECT_LEN		255
 #define ACTION_SUBJECT_LEN_MAX		ACTION_SUBJECT_LEN+1
 
-#define ZBX_SQL_ITEM_SELECT	"i.itemid,i.key_,h.host,h.port,i.delay,i.description,i.nextcheck,i.type,i.snmp_community,i.snmp_oid,h.useip,h.ip,i.history,i.lastvalue,i.prevvalue,i.hostid,h.status,i.value_type,h.network_errors,i.snmp_port,i.delta,i.prevorgvalue,i.lastclock,i.units,i.multiplier,i.snmpv3_securityname,i.snmpv3_securitylevel,i.snmpv3_authpassphrase,i.snmpv3_privpassphrase,i.formula,h.available,i.status,i.trapper_hosts,i.logtimefmt from hosts h, items i"
+#define ZBX_SQL_ITEM_SELECT	"i.itemid,i.key_,h.host,h.port,i.delay,i.description,i.nextcheck,i.type,i.snmp_community,i.snmp_oid,h.useip,h.ip,i.history,i.lastvalue,i.prevvalue,i.hostid,h.status,i.value_type,h.errors_from,i.snmp_port,i.delta,i.prevorgvalue,i.lastclock,i.units,i.multiplier,i.snmpv3_securityname,i.snmpv3_securitylevel,i.snmpv3_authpassphrase,i.snmpv3_privpassphrase,i.formula,h.available,i.status,i.trapper_hosts,i.logtimefmt from hosts h, items i"
 
 DB_HOST
 {
@@ -124,7 +124,7 @@ DB_HOST
 	int	port;
 	int	status;
 	int	disable_until;
-	int	network_errors;
+	int	errors_from;
 	char	error[HOST_ERROR_LEN_MAX];
 	int	available;
 };
@@ -161,7 +161,7 @@ DB_ITEM
 	char	*host;
 	int	host_status;
 	int	host_available;
-	int	host_network_errors;
+	int	host_errors_from;
 	int	useip;
 	char	*ip;
 	char	*shortname;
