@@ -26,6 +26,7 @@ extern  int     server_num;
 extern  int     CONFIG_TIMEOUT;
 extern  int     CONFIG_SUCKERD_FORKS;
 extern  int     CONFIG_REFRESH_UNSUPPORTED;
+extern  int     CONFIG_UNAVAILABLE_PERIOD;
 
 void main_poller_loop();
 
